--- a/Mission Board.html
+++ b/Mission Board.html
@@ -83,21 +83,35 @@
   <script>
 const missionData = [
   {
-    "name": "The Glowing Cow of Bramblebrook",
-    "type": "Investigation",
-    "rank": "Bronze",
-    "length": "Short",
-    "reward": "90g + Butter + ???",
-    "location": "Bramblebrook (West Hill)",
-    "objective": "Investigate the unnatural glow around Farmer Nill’s prized dairy cow.",
-    "steps": [
-      "Visit Bramblebrook and meet the cow.",
-      "Try not to spook it. Or drink the glowing milk.",
-      "Figure out what’s causing the glow.",
-      "Fix it. Or weaponize it (not recommended)."
-    ],
-    "extra": "Nill insists the cow now speaks fluent Elvish. Fluently. Badly."
-  },
+  "name": "Expired: The Glowing Cow of Bramblebrook",
+  "type": "Expired",
+  "rank": "Bronze",
+  "length": "Short",
+  "reward": "None (someone else got the butter...)",
+  "location": "Bramblebrook (West Hill)",
+  "objective": "The Guild regrets to inform you that Farmer Nill's cow was bought by a passing bard, who is now using it in his traveling opera troupe. Don't ask.",
+  "steps": [
+    "Move on. The cow has.",
+    "Maybe track down the bard later if you're curious (or bored)."
+  ],
+  "extra": "Nill now claims the barn itself whispers sonnets. May or may not be related."
+},
+{
+  "name": "Mossfang Hollow",
+  "type": "Exploration / Combat",
+  "rank": "Bronze",
+  "length": "Short-Medium",
+  "reward": "150g + Natural Curios + Minor Magical Trinket",
+  "location": "Mossfang Hollow (Near Bramblebrook Woods)",
+  "objective": "Investigate reports of aggressive plant life and strange, flickering lights deep within the old woods.",
+  "steps": [
+    "Travel to Mossfang Hollow through Bramblebrook Woods.",
+    "Navigate the shifting paths and avoid (or fight) the twisted plants.",
+    "Find the source of the unnatural growth.",
+    "Eliminate the threat — or harvest something useful if possible."
+  ],
+  "extra": "Locals say travelers vanish into the moss and don’t come back. Also, a giant raccoon was seen wearing a crown of ivy. Could be important. Probably isn’t."
+},
   {
     "name": "Tending the Fallen",
     "type": "Diplomatic",
