--- a/Mission Board.html
+++ b/Mission Board.html
@@ -62,6 +62,9 @@
 	<li style="margin: 0 1em;">
       <a href="Mission Reports.html" style="color: #fff; text-decoration: none; font-weight: bold;">📝 Mission Reports</a>
     </li>
+    <li style="margin: 0 1em;">
+      <a href="The Iron Reserve.html" style="color: #fff; text-decoration: none; font-weight: bold;">🛡️ The Iron Reserve</a>
+    </li>
   </ul>
 </nav>
   <h1>The Iron Meridian - Mission Board</h1>
