--- a/Mission Reports.html
+++ b/Mission Reports.html
@@ -77,6 +77,9 @@
     <li style="margin: 0 1em;">
       <a href="Mission Reports.html" style="color: #fff; text-decoration: none; font-weight: bold;">📝 Mission Reports</a>
     </li>
+	<li style="margin: 0 1em;">
+      <a href="The Iron Reserve.html" style="color: #fff; text-decoration: none; font-weight: bold;">🛡️ The Iron Reserve</a>
+    </li>
   </ul>
 </nav>
 
