Update The Iron Reserve.html

--- a/The Iron Reserve.html
+++ b/The Iron Reserve.html
@@ -115,13 +115,13 @@
       "quantity": "-"
     },
     {
-      "name": "Potion of Healing (Minor)",
+      "name": "(Sold) Potion of Healing (Minor)",
       "type": "Consumable",
       "description": "Restores 1d8 Hit Points. A lifesaver in a small glass bottle.",
       "price": "4 gp",
       "consumable": true,
       "rented": "No",
-      "quantity": 5
+      "quantity": 0
     },
     {
       "name": "Potion of Spider Climb (Lesser)",
@@ -196,7 +196,7 @@
       "quantity": "-"
     },
     {
-      "name": "Armor Potency Rune (+1)",
+      "name": "(Sold) Armor Potency Rune (+1)",
       "type": "Rune",
       "description": "Reinforces armor to better absorb damage.",
       "price": "35 gp",
